2009-01-05 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSController.h,
	* Source/NSController.m: Add one 10.4 method.
	* Headers/AppKit/NSUserDefaultsController.h: Add one 10.4 method.
	* Source/NSUserDefaultsController.m: Fully implement class.

2009-01-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSScroller.m: Fixup/reorganisation of setting names for
	components parts of scroller for theming.
	* Source/GSThemeDrawing.m: Fix memory leak spotted by Fred.

2009-01-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepGUI/GSTheme.h:
	* Source/GSTheme.m:
	* Source/NSButtonCell.m:
	* Source/NSScroller.m:
	* Source/GSThemeDrawing.m:
	Add methods to name specific elements in the gui so that we can
	locate resources for them and so that override methods can handle
	them specially.
	Change tile image lookup for improved consistency/simplicity and
	to use new naming.
	Add naming of component parts of a scroller.

2009-01-04 18:32-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSToolbarView.m: Use ASSIGN as suggested.  This corrects
	the crash and fixes the leak caused by the previous change.

2009-01-04 16:45-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSToolbarView.m: Correct crash in toolbar, since the
	static constant was being released.  

2009-01-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocumentController.m: Check only shouldCreateUI before
	callin makeWindowControllers. This is the behaviour reported for Cocoa.

2009-01-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSWindowDecorationView.m: Adopt the window size when
	adding or removing a toolbar, not the size of the content view.

2009-01-02 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow+Toolbar.m: Move window toolbar code from here ...
	* Source/GSWindowDecorationView.m: ... to here.
	* Source/NSToolbarFrameworkPrivate.h: Declare new window
	decoration view toolbar handling methods.
	* Source/NSToolbar.m: Use them.
