@@ -1,3 +1,14 @@
+2009-01-06 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/GSTheme.m:
+	* Source/NSScroller.m:
+	* Source/GSThemeDrawing.m:
+	* Headers/Additions/GNUstepGUI/GSTheme.h:
+	Extend element naming API to support temporary elements ... ones
+	which are 'owned' by a particular theme instance and automatically
+	removed when the theme deactivates.
+	Changed scroller code to use this for the shared scroller parts.
+
 2009-01-05 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Headers/AppKit/NSController.h,
